잡
C:\Users\bitcamp>node -v
v14.17.1

C:\Users\bitcamp>cd git

C:\Users\bitcamp\git>cd bitcamp-study

C:\Users\bitcamp\git\bitcamp-study>gcc hello.c
hello.c: In function 'main':
hello.c:4:27: error: expected ';' before 'return'
     printf("Hello world!")
                           ^
                           ;
     return 0;
     ~~~~~~

C:\Users\bitcamp\git\bitcamp-study>gcc hello.c

C:\Users\bitcamp\git\bitcamp-study>a.exe
Hello world!
C:\Users\bitcamp\git\bitcamp-study>a.exe
Hello world!
C:\Users\bitcamp\git\bitcamp-study>a.exe
Hello world!
C:\Users\bitcamp\git\bitcamp-study>gcc -o hello hello.c

C:\Users\bitcamp\git\bitcamp-study>gcc -o hello hello.c

C:\Users\bitcamp\git\bitcamp-study>dir
 C 드라이브의 볼륨에는 이름이 없습니다.
 볼륨 일련 번호: 5EA5-0099

 C:\Users\bitcamp\git\bitcamp-study 디렉터리

2021-06-29  오후 03:43    <DIR>          .
2021-06-29  오후 03:43    <DIR>          ..
2021-06-29  오전 09:57             1,814 1일차내용.txt
2021-06-29  오후 03:40            54,024 a.exe
2021-06-29  오후 03:42                82 hello.c
2021-06-29  오후 03:43            54,024 hello.exe
2021-06-29  오전 09:57               220 README.md
2021-06-29  오전 10:07                 3 test01.txt
2021-06-29  오전 10:07                 3 test03.txt
               7개 파일             110,170 바이트
               2개 디렉터리  183,135,211,520 바이트 남음

C:\Users\bitcamp\git\bitcamp-study>hello.exe
Hello, world!
C:\Users\bitcamp\git\bitcamp-study>hello
Hello, world!
C:\Users\bitcamp\git\bitcamp-study>$node hello.js
'$node'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는
배치 파일이 아닙니다.

C:\Users\bitcamp\git\bitcamp-study>node hello.js
Hello, world!

C:\Users\bitcamp\git\bitcamp-study>cd ..

C:\Users\bitcamp\git>cd bitcamp-20210621

C:\Users\bitcamp\git\bitcamp-20210621>git pull
remote: Enumerating objects: 9, done.
remote: Counting objects: 100% (9/9), done.
remote: Compressing objects: 100% (4/4), done.
remote: Total 6 (delta 1), reused 6 (delta 1), pack-reused 0
Unpacking objects: 100% (6/6), 2.55 MiB | 3.25 MiB/s, done.
From https://github.com/eomjinyoung/bitcamp-20210621
   ba22a4b..52deda4  main       -> origin/main
Updating ba22a4b..52deda4
Fast-forward
 ...6\220\353\260\224\352\270\260\354\264\2101.pdf" | Bin 7146036 -> 12469449 bytes
 README.md                                          |  22 ++++++++++++++++++++-
 hello.c                                            |   6 ++++++
 hello.js                                           |   1 +
 4 files changed, 28 insertions(+), 1 deletion(-)
 create mode 100644 hello.c
 create mode 100644 hello.js

C:\Users\bitcamp\git\bitcamp-20210621>git pull
remote: Enumerating objects: 5, done.
remote: Counting objects: 100% (5/5), done.
remote: Compressing objects: 100% (1/1), done.
remote: Total 3 (delta 2), reused 3 (delta 2), pack-reused 0
Unpacking objects: 100% (3/3), 475.10 KiB | 706.00 KiB/s, done.
From https://github.com/eomjinyoung/bitcamp-20210621
   52deda4..6c4280f  main       -> origin/main
Updating 52deda4..6c4280f
Fast-forward
 ...6\220\353\260\224\352\270\260\354\264\2101.pdf" | Bin 12469449 -> 13490822 bytes
 1 file changed, 0 insertions(+), 0 deletions(-)

C:\Users\bitcamp\git\bitcamp-20210621>